<resources>
    <string name="app_name">Men\'s Fashion</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="create_new_account">Register</string>
    <string name="not_registered_yet">not registered yet?</string>
    <string name="shoppe_now">Shoppe now</string>
    <string name="sign_up">sign up</string>
    <string name="user_name">user name</string>
    <string name="sign_out">Sign Out</string>
    <string name="forget">Forget Your Password?</string>
    <string name="home">Home</string>
    <string name="navigation">Navigation</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="shop_now">shop now</string>
    <string name="welcome_back">Welcome \nBack</string>
    <string name="Register">register</string>
    <string name="have_account">Have an account?</string>
    <string name="required">required</string>
    <string name="invalid_email">invalid email</string>
    <string name="invalid_passsword">invalid password</string>
    <string name="color">color</string>
    <string name="your_size">your size</string>
    <string name="add_to_cart">add to cart</string>
    <string name="description">description</string>
</resources>