<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
  <variable
      name="vm"
      type="com.example.mensfashion.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="32dp"
        >



            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.App.CardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"

               >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/user_email_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.App.TextInputLayout"

                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                           style="@style/MyTextInputEditText"

                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.App.TextInputLayout"

                        app:layout_constraintTop_toBottomOf="@id/user_email_layout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            style="@style/MyTextInputEditText" />

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                  style="@style/ButtonStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_cv" />

<!--            <ProgressBar-->
<!--                android:id="@+id/login_progress"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="24dp"-->
<!--                android:visibility="gone"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                />-->
           <ViewStub
               android:id="@+id/progress_viewStub"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout="@layout/progress_bar_layout"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               />

            <TextView
                android:id="@+id/tv_forgetten_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/forgetting_password"
                android:textColor="@color/purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_btn"
                app:layout_constraintVertical_bias="0.0" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>