<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.mensfashion.ui.details.DetailsViewModel" />

        <import type="android.view.View" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="@dimen/_8sdp"
        tools:context=".ui.details.DetailsFragment"

        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/white"

                app:expandedTitleGravity="bottom"
                app:expandedTitleMarginEnd="8dp"
                app:expandedTitleMarginStart="8dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">


                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/product_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent=".34"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="#989393"
                    app:sliderScrollTimeInSec="2"

                    />


                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:visibility="visible"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/btn_fav"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="@dimen/_16sdp"
                            android:background="@android:color/transparent"
                            android:onClick="@{()->vm.onFavouriteClick()}"
                            android:src="@drawable/ic_favorite_border"
                            android:tint="@color/red"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/btn_back"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:gravity="start"
                            android:onClick="@{()->vm.onFavouriteClick()}"
                            android:src="@drawable/ic_back"
                            android:tint="@color/black"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"

            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_32sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/oval_shap"
                    android:elevation="@dimen/_16sdp"
                    android:paddingBottom="100dp"


                    >

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_32sdp"
                        android:text="@={vm.productName}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp"

                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:textAllCaps="false"

                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_32sdp"
                        android:text="@={vm.productPrice}"
                        android:textColor="@color/orangy"
                        android:textSize="@dimen/_16sdp"

                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:textAllCaps="false"

                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/product_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:text="@={vm.productDescription}"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/product_name"
                        app:layout_constraintTop_toBottomOf="@id/product_name"
                        app:textAllCaps="false"

                        />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_product_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_32sdp"
                        android:text="@string/color"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="normal"
                        android:visibility="@{vm.coloTextVisibility?View.VISIBLE:View.GONE}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_description"
                        app:textAllCaps="false"

                        />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:orientation="horizontal"
                        android:visibility="@{vm.colorVisibility?View.VISIBLE:View.GONE}"
                        app:layout_constraintStart_toStartOf="@id/tv_product_color"
                        app:layout_constraintTop_toBottomOf="@id/tv_product_color"
                        tools:listitem="@layout/color_item"


                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_product_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_size"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="normal"
                        android:visibility="@{vm.sizeTextVisibility?View.VISIBLE:View.GONE}"
                        app:layout_constraintStart_toStartOf="@id/tv_product_color"
                        app:layout_constraintTop_toBottomOf="@id/recyclerView_color"
                        app:textAllCaps="false"

                        />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_64sdp"
                        android:orientation="horizontal"
                        android:visibility="@{vm.sizeVisibility?View.VISIBLE:View.GONE}"
                        app:layout_constraintStart_toStartOf="@id/tv_product_color"
                        app:layout_constraintTop_toBottomOf="@id/tv_product_size"
                        tools:listitem="@layout/color_item"

                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_cart"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/_24sdp"
            android:backgroundTint="@color/orangy"
            android:drawableEnd="@drawable/ic_add_cart"
            android:onClick="@{()->vm.addToCart()}"
            android:padding="@dimen/_16sdp"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_16sdp"

            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>